force-app/main/default/objects/Residual_Report_Data__c/Residual_Report_Data__c.object-meta.xml
<CustomObject>
    <label>Residual Report Data</label>
    <nameField>
        <label>Residual Report Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residual Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>