force-app/main/default/objects/Residual_Report_Data__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Residual Report Data</relationshipLabel>
    <relationshipName>Residual_Report_Data</relationshipName>
    <type>Lookup</type>
</CustomField>