force-app/main/default/objects/Residual_Report_Data__c/fields/Monthly_Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales_Volume__c</fullName>
    <label>Monthly Sales Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>