force-app/main/default/objects/Residual_Report_Data__c/fields/Percentage_P_c__c.field-meta.xml
<CustomField>
    <fullName>Percentage_P_c__c</fullName>
    <label>Percentage_P__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>